--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "e-commerce-back-end",
   "version": "1.0.0",
   "description": "## Your Task",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "watch": "nodemon server.js",
-    "seed": "node ./seeds.index.js"
+    "seed": "node seeds/index.js"
   },
   "repository": {
     "type": "git",
@@ -21,9 +21,11 @@
   "homepage": "https://github.com/prnessy23/E-commerce-back-end#readme",
   "dependencies": {
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "inquirer": "^8.2.0",
     "mysql2": "^2.3.3",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "sequelize": "^6.28.0"
   },
   "keywords": []
 }
